# xfer

./: Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml
.github/workflows/: test.yml
xfer-client/: Cargo.toml
xfer-client/src/: api_client.rs  cryptography.rs  main.rs
xfer-client/src/commands/: completion.rs  download.rs  mod.rs  upload.rs
xfer-client/src/cryptography/: mod.rs  wordlist.rs
xfer-server/: Cargo.toml  README.md
xfer-server/src/: main.rs  storage.rs
xfer-server/src/routes/: configuration.rs  download.rs  index.rs  mod.rs  transfer.rs  upload.rs
