[package]
name = "xfer"
authors = ["Blooym"]
description = "Client for securely transferring files across the internet"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
clap = { version = "4.5.42", features = ["derive", "env"] }
indicatif = "0.18.0"
inquire = "0.7.5"
reqwest = { version = "0.12.16", default-features = false, features = [
    "rustls-tls",
    "blocking",
    "json",
] }
time = { version = "0.3.41", features = ["formatting", "local-offset"] }
url = "2.5.4"
serde = { version = "1.0.219", features = ["derive"] }
tar = "0.4.44"
flate2 = "1.1.2"
rand = "0.9.2"
argon2 = { version = "0.5.3", features = ["zeroize"] }
eff-wordlist = { default-features = false, version = "1.0.3" }
clap_complete = "4.5.55"
