[package]
name = "xfer-server"
authors = ["Blooym"]
description = "Server to facilitate transfers between xfer clients"
repository = "https://github.com/Blooym/xfer"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
axum = { version = "0.8.4", features = ["http2"] }
bytesize = "2.0.1"
clap = { version = "4.5.39", features = ["derive", "env"] }
clap-duration = "0.1.11"
dirs = "6.0.0"
dotenvy = "0.15.7"
duration-human = "0.1.10"
tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "net",
] }
tower-http = { version = "0.6.6", features = [
    "catch-panic",
    "normalize-path",
    "trace",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.219", features = ["derive"] }
infer = "0.19.0"
rand = "0.9.1"
eff-wordlist = { default-features = false, version = "1.0.3" }
